force-app/main/default/objects/Donprotocolairesiege__c/fields/Statut_Don__c.field-meta.xml
<CustomField>
    <fullName>Statut_Don__c</fullName>
    <label>Statut Don</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Attente</fullName>
            </value>
            <value>
                <fullName>Don crée</fullName>
                <label>Dossier Complet</label>
            </value>
            <value>
                <fullName>Accord DL/DT</fullName>
            </value>
            <value>
                <fullName>Refus DL/DT</fullName>
            </value>
            <value>
                <fullName>Accord Pilotage et Réseau</fullName>
                <label>Accord Service Pilotage Réseau</label>
            </value>
            <value>
                <fullName>Refus Pilotage et Réseau</fullName>
                <label>Refus Service Pilotage Réseau</label>
            </value>
            <value>
                <fullName>Accord Direction Réseau</fullName>
            </value>
            <value>
                <fullName>Note de dépense validée</fullName>
            </value>
            <value>
                <fullName>Chèque Envoyé</fullName>
            </value>
            <value>
                <fullName>Refus Direction Réseau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>