force-app/main/default/objects/Donprotocolairesiege__c/fields/Tarification_Conforme_aux_RGAT__c.field-meta.xml
<CustomField>
    <fullName>Tarification_Conforme_aux_RGAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tarification Conforme aux RGAT</label>
    <type>Checkbox</type>
</CustomField>