force-app/main/default/objects/Donprotocolairesiege__c/fields/test_date__c.field-meta.xml
<CustomField>
    <fullName>test_date__c</fullName>
    <label>test date</label>
    <type>Date</type>
</CustomField>