force-app/main/default/objects/Donprotocolairesiege__c/fields/test_formule__c.field-meta.xml
<CustomField>
    <fullName>test_formule__c</fullName>
    <formula>&apos;bonjour&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test formule</label>
    <type>Text</type>
</CustomField>