force-app/main/default/objects/Donprotocolairesiege__c/fields/Type_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>Type_de_paiement__c</fullName>
    <label>Type de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chèque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>