force-app/main/default/objects/Donprotocolairesiege__c/fields/Type_de_Tarification__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Tarification__c</fullName>
    <label>Type de Tarification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Au Forfait</fullName>
            </value>
            <value>
                <fullName>Au Pourcentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>