force-app/main/default/objects/Donprotocolairesiege__c/fields/Type_Don__c.field-meta.xml
<CustomField>
    <fullName>Type_Don__c</fullName>
    <defaultValue>IF(  $RecordType.Name=&apos;Protocolaire&apos;  , &apos;Protocolaire&apos;, &apos;Appréciation du siège&apos;)</defaultValue>
    <label>Type Don</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Protocolaire</fullName>
            </value>
            <value>
                <fullName>Appréciation du siège</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>