force-app/main/default/objects/Donprotocolairesiege__c/fields/UO_DL__c.field-meta.xml
<CustomField>
    <fullName>UO_DL__c</fullName>
    <formula>DL_DT__r.Code_UO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UO DL</label>
    <type>Text</type>
</CustomField>