force-app/main/default/objects/Donprotocolairesiege__c/fields/v_nement_2_Date_concern_e__c.field-meta.xml
<CustomField>
    <fullName>v_nement_2_Date_concern_e__c</fullName>
    <label>Événement : 2 Date concernée</label>
    <type>Date</type>
</CustomField>