force-app/main/default/objects/Donprotocolairesiege__c/fields/Validation_Charg_Client_le__c.field-meta.xml
<CustomField>
    <fullName>Validation_Charg_Client_le__c</fullName>
    <label>Validation Chargé Clientèle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Attente</fullName>
            </value>
            <value>
                <fullName>Dossier Complet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>