force-app/main/default/objects/Donprotocolairesiege__c/fields/Validation_Note_de_D_pense__c.field-meta.xml
<CustomField>
    <fullName>Validation_Note_de_D_pense__c</fullName>
    <label>Validation Note de Dépense</label>
    <length>30</length>
    <type>Text</type>
</CustomField>