force-app/main/default/objects/Donprotocolairesiege__c/fields/validationcc__c.field-meta.xml
<CustomField>
    <fullName>validationcc__c</fullName>
    <label>Validation CC</label>
    <type>TextArea</type>
</CustomField>