force-app/main/default/objects/Donprotocolairesiege__c/recordTypes/Aprr_ciationsiege.recordType-meta.xml
<RecordType>
    <fullName>Aprr_ciationsiege</fullName>
    <active>true</active>
    <label>Appréciation du Siège</label>
</RecordType>