force-app/main/default/objects/Donprotocolairesiege__c/recordTypes/protocolaire.recordType-meta.xml
<RecordType>
    <fullName>protocolaire</fullName>
    <active>true</active>
    <label>Protocolaire</label>
</RecordType>