force-app/main/default/objects/Donprotocolairesiege__c/validationRules/cloture_apres_decision_direction.validationRule-meta.xml
<ValidationRule>
    <fullName>cloture_apres_decision_direction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(Cl_tur__c , &apos;Chèque envoyé&apos;), NOT( ISPICKVAL( D_cisiondirection__c , &apos;Accord&apos;) )  )</errorConditionFormula>
    <errorMessage>Le chèque ne peut pas être envoyé sans l&apos;accord de la direction réseau</errorMessage>
</ValidationRule>