force-app/main/default/objects/Donprotocolairesiege__c/validationRules/Date_evenement1.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_evenement1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(YEAR(  Date_concern_e__c  ) &lt;&gt;  (YEAR ( TODAY() ) -1),  ISPICKVAL( Type_Don__c , &apos;Protocolaire&apos;) )</errorConditionFormula>
    <errorMessage>On ne gère que les dons de l’année N-1</errorMessage>
</ValidationRule>