force-app/main/default/objects/Donprotocolairesiege__c/validationRules/Dossier_complet.validationRule-meta.xml
<ValidationRule>
    <fullName>Dossier_complet</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   
    NOT(ISPICKVAL( DOSSIER_COMPLET__c , &apos;Oui&apos;)), 
         ISPICKVAL(  Statut__c , &apos;Accord&apos;) )</errorConditionFormula>
    <errorMessage>Le dossier doit être complet avant de valider le dossier</errorMessage>
</ValidationRule>