force-app/main/default/objects/Donprotocolairesiege__c/validationRules/is100.validationRule-meta.xml
<ValidationRule>
    <fullName>is100</fullName>
    <active>true</active>
    <errorConditionFormula>Somme_des_pourcentages_des_Dons__c  &gt; 1</errorConditionFormula>
    <errorMessage>La somme des parts du Don doit être égale à 100 %</errorMessage>
</ValidationRule>