force-app/main/default/objects/Donprotocolairesiege__c/validationRules/NDCHEQUE.validationRule-meta.xml
<ValidationRule>
    <fullName>NDCHEQUE</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(Validation_Note_de_D_pense__c=&quot;Oui&quot;), ISPICKVAL( Cl_tur__c , &apos;Chèque envoyé&apos;)   )</errorConditionFormula>
    <errorMessage>Une validation de Note de Dépense est nécessaire avant d&apos;envoyer le chèque</errorMessage>
</ValidationRule>