force-app/main/default/objects/Donprotocolairesiege__c/validationRules/pilotage_creation_don.validationRule-meta.xml
<ValidationRule>
    <fullName>pilotage_creation_don</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

OR( ISPICKVAL( Profile_Cr_ation__c , &apos;Pilotage réseau&apos;), ISPICKVAL( Profile_Cr_ation__c , &apos;Direction réseau&apos;)),

NOT(  CONTAINS(  DL_DT__r.Name ,&apos;Service pilotage et réseau&apos; ))
)</errorConditionFormula>
    <errorMessage>Le don est crée par le service pilotage et réseau, veuillez vérifier la DL/DT</errorMessage>
</ValidationRule>