force-app/main/default/objects/Donprotocolairesiege__c/validationRules/profile_creation_DL.validationRule-meta.xml
<ValidationRule>
    <fullName>profile_creation_DL</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISBLANK( DL_DT__c ) , ISPICKVAL( Profile_Cr_ation__c , &apos;Chargé Clientèle&apos;) )</errorConditionFormula>
    <errorMessage>Vous devez choisir une délégation</errorMessage>
</ValidationRule>