force-app/main/default/objects/Donprotocolairesiege__c/validationRules/type_de_facturation_forfait_siege_1.validationRule-meta.xml
<ValidationRule>
    <fullName>type_de_facturation_forfait_siege_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type_Don__c ,&quot;Appréciation du siège&quot;),ISPICKVAL( Type_de_Tarification__c , &quot;Au Forfait&quot;) ,  NOT(AND( INCLUDES( Pi_ces_Jointes__c , &quot;demande autorisation&quot;) ,INCLUDES( Pi_ces_Jointes__c , &quot;Demande écrite de don jointe&quot;) )))</errorConditionFormula>
    <errorMessage>Vous avez choisi une tarification au forfait, il faut joindre la demande d’autorisation et la demande écrite de don</errorMessage>
</ValidationRule>