force-app/main/default/objects/Donprotocolairesiege__c/validationRules/type_de_facturation_protocolaire.validationRule-meta.xml
<ValidationRule>
    <fullName>type_de_facturation_protocolaire</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type_Don__c ,&quot;Protocolaire&quot;),  NOT(AND( INCLUDES( Pi_ces_Jointes__c , &quot;Factures de l&apos;année écoulée&quot;) ,INCLUDES( Pi_ces_Jointes__c , &quot;Demande écrite de don jointe&quot;) )))</errorConditionFormula>
    <errorMessage>Vous devez joindre la demande écrite de don  et les justificatifs des achats réalisés au cours de l’année écoulée</errorMessage>
</ValidationRule>