force-app/main/default/objects/Donprotocolairesiege__c/validationRules/Validation_cloture_refus.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_cloture_refus</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Cl_tur__c , &apos;Don refusé&apos;),  ISPICKVAL( D_cisiondirection__c , &apos;Accord&apos;)  )</errorConditionFormula>
    <errorMessage>Dans le cas de l&apos;accord de la direction, un chèque doit être envoyer au bénéficiaire</errorMessage>
</ValidationRule>