force-app/main/default/objects/Donprotocolairesiege__c/validationRules/Validation_don_DL_et_pilotage.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_don_DL_et_pilotage</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT (ISPICKVAL( D_cisionDL__c , &quot;Accord&quot;)) , ISPICKVAL( Statut__c , &quot;Accord&quot;),ISPICKVAL( Profile_Cr_ation__c ,&apos;Chargé Clientèle&apos;) )</errorConditionFormula>
    <errorMessage>Le Directeur DL/DT doit valider le Don avant que le service pilotage et réseau puisse le valider</errorMessage>
</ValidationRule>