force-app/main/default/objects/Donprotocolairesiege__c/validationRules/Validation_pilotage_Direction.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_pilotage_Direction</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT (ISPICKVAL(  Statut__c  , &quot;Accord&quot;)) , ISPICKVAL(  D_cisiondirection__c  , &quot;Accord&quot;) )</errorConditionFormula>
    <errorMessage>Le service pilotage doit valider le Don avant que la direction réseau puisse le valider</errorMessage>
</ValidationRule>