force-app/main/default/objects/Donprotocolairesiege__c/listViews/Dons_d_taill_s.listView-meta.xml
<ListView>
    <fullName>Dons_d_taill_s</fullName>
    <columns>NAME</columns>
    <columns>DL_DT__c</columns>
    <columns>Montant_du_Don_HT__c</columns>
    <columns>Numwebdr__c</columns>
    <columns>Organisateur__c</columns>
    <columns>Statut__c</columns>
    <columns>Ville__c</columns>
    <columns>Type_Don__c</columns>
    <columns>Pourcentage_proposition__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dons détaillés</label>
</ListView>