force-app/main/default/objects/Donprotocolairesiege__c/listViews/ToutCC.listView-meta.xml
<ListView>
    <fullName>ToutCC</fullName>
    <columns>NAME</columns>
    <columns>Type_Don__c</columns>
    <columns>DL_DT__c</columns>
    <columns>Organisateur__c</columns>
    <columns>D_cisionDL__c</columns>
    <columns>D_cisiondirection__c</columns>
    <columns>Cl_tur__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <sharedTo>
        <role>Pilotage_r_seau</role>
    </sharedTo>
</ListView>