force-app/main/default/objects/Donprotocolairesiege__c/listViews/ToutDLDT.listView-meta.xml
<ListView>
    <fullName>ToutDLDT</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>DL_DT__c</columns>
    <columns>DOSSIER_COMPLET__c</columns>
    <columns>Organisateur__c</columns>
    <columns>Montant_du_Don_HT__c</columns>
    <columns>D_cisiondirection__c</columns>
    <columns>Cl_tur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Get_DL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tout</label>
    <sharedTo>
        <role>DLDT</role>
    </sharedTo>
</ListView>